--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ img {
     width: 100px;
 }
 #hero-section {
-    background-image: url("images/torshov.jpg");
+    background-image: url("/torshov.jpg");
     background-size: cover;}
     
 .flex-box{
